# example-fastapi

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.api.yml  docker-compose.yml  entrypoint.sh  lint.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 878ee66c78c3_create_tables_posts_users_and_votes.py
app/: config.py  database.py  main.py  models.py  schemas.py  security.py
app/routers/: auth.py  post.py  user.py
tests/: conftest.py  database.py  test_auth.py  test_posts.py  test_users.py
